tests/snapshots/trace_solver@7573417049886084850.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    always_inspect_bm: false
  bundle_name: stateless
  request: "mut ref mut x: T"
---
mut ref mut x @ s: T
// Applying rule `BindingBorrow`
mut x @ &mut s: &mut T
// Applying rule `Binding`
let mut x: &mut T = &mut s

// Final bindings (simplified):
let mut x: &mut T = &mut s;
